--- a/conventions.html
+++ b/conventions.html
@@ -282,7 +282,7 @@ relative imports.</p>
 <ul class="simple">
 <li>Try to follow the coding style conventions laid out in PEP 8.</li>
 <li>Try to document your app with docstrings as defined in PEP 257.</li>
-<li>Use relative imports to import your apps internal modules.</li>
+<li>Use relative imports to import your app&#8217;s internal modules.</li>
 </ul>
 </div>
 </div>
