--- a/environment.html
+++ b/environment.html
@@ -315,7 +315,7 @@ would be a massive breach of security.</p>
 <p class="last">When making security related decisions, I always like to assume that my repository will become public at some point. This means keeping secrets out and never assuming that a security hole won&#8217;t be found because, &#8220;Who&#8217;s going to guess that they can do that?&#8221; This kind of assumption is known as security by obscurity and it&#8217;s a bad policy to rely on.</p>
 </div>
 <p>When using Git, you can create a special file called <em>.gitignore</em> in
-your repository. In it, list regular expression patterns to match
+your repository. In it, list wildcard patterns to match
 against filenames. Any filename that matches one of the patterns will be
 ignored by Git. I recommend using the <em>.gitignore</em> shown in Listing~ to
 get you started.</p>
