--- a/organizing.html
+++ b/organizing.html
@@ -268,7 +268,7 @@ your repository, but these are common to most Flask applications.</p>
 <tbody valign="top">
 <tr class="row-odd"><td>run.py</td>
 <td>This is the file that is invoked to start up a development
-server.It gets a copy of the app from your package and runs
+server. It gets a copy of the app from your package and runs
 it. This won&#8217;t be used in production, but it will see a lot
 of mileage in development.</td>
 </tr>
@@ -290,7 +290,7 @@ your application. For example, you might have <tt class="docutils literal"><span
 in config.py, but set <tt class="docutils literal"><span class="pre">DEBUG</span> <span class="pre">=</span> <span class="pre">True</span></tt> in instance/config.py on
 your local machine for development. Since this file will be
 read in after config.py, it will override it and set
-<tt class="docutils literal"><span class="pre">DEBUG</span> <span class="pre">=</span> <span class="pre">False</span></tt>.</td>
+<tt class="docutils literal"><span class="pre">DEBUG</span> <span class="pre">=</span> <span class="pre">True</span></tt>.</td>
 </tr>
 <tr class="row-odd"><td>/yourapp/</td>
 <td>This is the package that contains your application.</td>
