--- a/storing.html
+++ b/storing.html
@@ -357,7 +357,7 @@ functions using the tools provided by Alembic&#8217;s <tt class="docutils litera
 </div>
 <div class="admonition warning">
 <p class="first admonition-title">Warning</p>
-<p class="last">Don&#8217;t forget to put a plan in place to back up your data. The details of that plan are outside the scope of this book, but you should always have your datbase backed up in a secure and robust way.</p>
+<p class="last">Don&#8217;t forget to put a plan in place to back up your data. The details of that plan are outside the scope of this book, but you should always have your database backed up in a secure and robust way.</p>
 </div>
 <div class="admonition note">
 <p class="first admonition-title">Note</p>
